name:           memo-AG
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/pedromartins4/memo-AG#readme>
homepage:       https://github.com/pedromartins4/memo-AG#readme
bug-reports:    https://github.com/pedromartins4/memo-AG/issues
author:         Tom Westerhout
maintainer:     kot.tom97@gmail.com
copyright:      (c) 2018 Tom Westerhout
license:        GPL-3.0
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    -- ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/pedromartins4/memo-AG

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , data-default-class
    , vinyl
    , deepseq
    , constraints
    , generic-deriving
    , transformers
  exposed-modules:
      Zipper
  ghc-options: -O0 -Wall -fprof-auto
  default-language: Haskell2010
  default-extensions:  GeneralizedNewtypeDeriving
                       DeriveDataTypeable
                       DeriveGeneric
                       BangPatterns
                       FlexibleContexts
                       FlexibleInstances
                       GADTs
                       TypeApplications
                       TypeFamilies
                       TypeOperators
                       ScopedTypeVariables
                       TypeApplications
                       DataKinds
                       RankNTypes
                       TypeInType

-- executable repmin-time
--   -- type: exitcode-stdio-1.0
--   hs-source-dirs: bench/Repmin
--   main-is: Time.hs 
--   build-depends:
--       base >=4.7 && <5
--     , deepseq 
--     , criterion
--     , memo-AG
--   ghc-options: -O2 -fprof-auto -rtsopts
--   default-language: Haskell2010

executable main
  hs-source-dirs: app
  main-is: Main.hs 
  build-depends:
      base >=4.7 && <5
    , data-default-class
    , constraints
    , deepseq 
    , memo-AG
    , vinyl
    , transformers
    -- , lens
    -- , zippers
    -- , HList
  ghc-options: -O2 -Wall -fprof-auto -rtsopts
  default-language: Haskell2010

-- test-suite memo-AG-test
--   type: exitcode-stdio-1.0
--   main-is: Spec.hs
--   hs-source-dirs:
--       test
--   ghc-options: -threaded -rtsopts -with-rtsopts=-N
--   build-depends:
--       base >=4.7 && <5
--     -- , memo-AG
--   other-modules:
--       Paths_memo_AG
--   default-language: Haskell2010
